# CPP_RabbitMQ_Practice

./: CMakeLists.txt  consumer.h  main.cpp  producer.cpp  producer.h  readme.md  readme.txt
app_rabbitMQ_library/src/: CMakeLists.txt  conanfile.py
app_rabbitMQ_library/src/rabbitMQ/: consumer.cpp  consumer.h  producer.cpp  producer.h
app_utils/src/: CMakeLists.txt  conanfile.py
app_utils/src/utils/: Chrono.h  time.cpp  time.h
